@@ -60,7 +60,7 @@
   <!-- ====================================================== -->
   <!-- Stuff needed by all targets                            -->
   <!-- ====================================================== -->
-  <target name="init" depends="ivy-init">
+  <target name="init" depends="ivy-init" description="--> stuff required by all targets">
     <mkdir dir="${build.dir}"/>
     <mkdir dir="${build.classes}"/>
     <mkdir dir="${release.dir}"/>
@@ -81,9 +81,9 @@
   <!-- ====================================================== -->
   <!-- Compile the Java files                                 -->
   <!-- ====================================================== -->
-  <target name="compile" depends="compile-core, compile-plugins"/>
+  <target name="compile" depends="compile-core, compile-plugins" description="--> compile all Java files"/>
 
-  <target name="compile-core" depends="init, resolve-default">
+  <target name="compile-core" depends="init, resolve-default" description="--> compile core Java files only">
     <javac 
      encoding="${build.encoding}" 
      srcdir="${src.dir}"
@@ -99,7 +99,7 @@
     </javac>    
   </target>
 
-  <target name="compile-plugins" depends="init, resolve-default">
+  <target name="compile-plugins" depends="init, resolve-default" description="--> compile plugins only">
     <ant dir="src/plugin" target="deploy" inheritAll="false"/>
   </target>
 
@@ -108,7 +108,7 @@
   <!-- ================================================================== -->
   <!--                                                                    -->
   <!-- ================================================================== -->
-  <target name="jar" depends="compile-core">
+  <target name="jar" depends="compile-core" description="--> make nutch.jar">
     <copy file="${conf.dir}/nutch-default.xml"
           todir="${build.classes}"/>
     <copy file="${conf.dir}/nutch-site.xml"
@@ -125,7 +125,7 @@
   <!-- ================================================================== -->
   <!--                                                                    -->
   <!-- ================================================================== -->  
-  <target name="release" depends="compile-core" description="generate the release distribution">
+  <target name="release" depends="compile-core" description="--> generate the release distribution">
     <copy file="${conf.dir}/nutch-default.xml"
           todir="${build.classes}"/>
     <copy file="${conf.dir}/nutch-site.xml"
@@ -225,7 +225,7 @@
   <!-- ================================================================== -->
   <!--                                                                    -->
   <!-- ================================================================== -->  
-  <target name="deploy" depends="release" description="deploy to Apache Nexus">
+  <target name="deploy" depends="release" description="--> deploy to Apache Nexus">
 	
 	<!-- generate a pom file -->
 	<ivy:makepom ivyfile="${ivy.file}" pomfile="${basedir}/pom.xml" templatefile="ivy/mvn.template">
@@ -271,7 +271,7 @@
   <!-- ================================================================== -->
   <!--                                                                    -->
   <!-- ================================================================== -->
-  <target name="job" depends="compile">
+  <target name="job" depends="compile" description="--> make nutch.job jar">
     <jar jarfile="${build.dir}/${final.name}.job">
       <!-- If the build.classes has the nutch config files because the jar
            command command has run, exclude them.  The conf directory has 
@@ -286,7 +286,7 @@
     </jar>
   </target>
 
-  <target name="runtime" depends="jar, job">
+  <target name="runtime" depends="jar, job" description="--> default target for running Nutch">
     <mkdir dir="${runtime.dir}"/>
     <mkdir dir="${runtime.local}"/>
     <mkdir dir="${runtime.deploy}"/>
@@ -328,7 +328,7 @@
   <!-- ================================================================== -->
   <!-- Compile test code                                                  --> 
   <!-- ================================================================== -->
-  <target name="compile-core-test" depends="compile-core, resolve-test">
+  <target name="compile-core-test" depends="compile-core, resolve-test" description="--> compile test code">
     <javac 
      encoding="${build.encoding}" 
      srcdir="${test.src.dir}"
@@ -348,7 +348,7 @@
   <!-- Run Nutch proxy                                                    --> 
   <!-- ================================================================== -->
 
-  <target name="proxy" depends="job, compile-core-test">
+  <target name="proxy" depends="job, compile-core-test" description="--> run nutch proxy">
     <java classname="org.apache.nutch.tools.proxy.TestbedProxy" fork="true">
       <classpath refid="test.classpath"/>
       <arg value="-fake"/>
@@ -364,7 +364,7 @@
   <!-- Run Nutch benchmarking analysis                                    --> 
   <!-- ================================================================== -->
 
-  <target name="benchmark">
+  <target name="benchmark" description="--> run nutch benchmarking analysis">
     <java classname="org.apache.nutch.tools.Benchmark" fork="true">
       <classpath refid="test.classpath"/>
       <jvmarg line="-Xmx512m -Djavax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl"/>
@@ -380,9 +380,9 @@
   <!-- ================================================================== -->
   <!-- Run unit tests                                                     --> 
   <!-- ================================================================== -->
-  <target name="test" depends="test-core, test-plugins"/>
+  <target name="test" depends="test-core, test-plugins" description="--> run JUnit tests"/>
 
-  <target name="test-core" depends="job, compile-core-test">
+  <target name="test-core" depends="job, compile-core-test" description="--> run core JUnit tests only">
 
     <delete dir="${test.build.data}"/>
     <mkdir dir="${test.build.data}"/>
@@ -418,11 +418,11 @@
 
   </target>   
 
-  <target name="test-plugins" depends="compile">
+  <target name="test-plugins" depends="compile" description="--> run plugin JUnit tests only">
     <ant dir="src/plugin" target="test" inheritAll="false"/>
   </target>
 
-  <target name="nightly" depends="test, tar-src, zip-src">
+  <target name="nightly" depends="test, tar-src, zip-src" description="--> run the nightly target build">
   </target>
 
   <!-- ================================================================== -->
@@ -442,7 +442,7 @@
     <antcall target="copy-libs"/>
   </target>
 
-  <target name="copy-libs">
+  <target name="copy-libs" description="--> copy the libs in lib, which are not ivy enabled">
     <!-- copy the libs in lib, which are not ivy enabled-->
     <copy todir="${build.lib.dir}/" failonerror="false">
       <fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -468,30 +468,30 @@
   </target>
 
   <!-- target: ivy-init  ================================================ -->
-  <target name="ivy-init" depends="ivy-probe-antlib, ivy-init-antlib">
+  <target name="ivy-init" depends="ivy-probe-antlib, ivy-init-antlib" description="--> initialise Ivy settings">
     <ivy:settings file="${ivy.dir}/ivysettings.xml" />
   </target>
 
   <!-- target: ivy-probe-antlib  ======================================== -->
-  <target name="ivy-probe-antlib">
+  <target name="ivy-probe-antlib" description="--> probe the antlib library">
     <condition property="ivy.found">
       <typefound uri="antlib:org.apache.ivy.ant" name="cleancache" />
     </condition>
   </target>
 
   <!-- target: ivy-download  ============================================ -->
-  <target name="ivy-download" description="Download ivy">
+  <target name="ivy-download" description="--> download ivy">
     <available file="${ivy.jar}" property="ivy.jar.found"/>
     <antcall target="-ivy-download-unchecked"/>
   </target>
 
   <!-- target: ivy-download-unchecked  ================================== -->
-  <target name="-ivy-download-unchecked" unless="ivy.jar.found">
+  <target name="-ivy-download-unchecked" unless="ivy.jar.found" description="--> fetch any ivy file">
     <get src="${ivy.repo.url}" dest="${ivy.jar}" usetimestamp="true" />
   </target>
 
   <!-- target: ivy-init-antlib  ========================================= -->
-  <target name="ivy-init-antlib" depends="ivy-download" unless="ivy.found">
+  <target name="ivy-init-antlib" depends="ivy-download" unless="ivy.found" description="--> attempt to use Ivy with Antlib">
     <typedef uri="antlib:org.apache.ivy.ant" onerror="fail" loaderRef="ivyLoader">
       <classpath>
         <pathelement location="${ivy.jar}" />
@@ -511,7 +511,7 @@
   <!-- ================================================================== -->
   <!-- Documentation                                                      -->
   <!-- ================================================================== -->
-  <target name="javadoc" depends="compile">
+  <target name="javadoc" depends="compile" description="--> generate Javadoc">
     <mkdir dir="${build.javadoc}"/>
     <javadoc
       overview="${src.dir}/overview.html"
@@ -591,7 +591,7 @@
           todir="${build.javadoc}/org/apache/nutch/plugin/doc-files"/>
   </target>	
 	
-  <target name="default-doc">
+  <target name="default-doc" description="--> generate default Nutch documentation">
     <style basedir="${conf.dir}" destdir="${docs.dir}"
            includes="nutch-default.xml" style="conf/nutch-conf.xsl"/>
   </target>
@@ -601,7 +601,7 @@
   <!-- ================================================================== -->
   <!--                                                                    -->
   <!-- ================================================================== -->
-  <target name="package-src" depends="runtime, javadoc">
+  <target name="package-src" depends="runtime, javadoc" description="--> generate source distribution package">
     <mkdir dir="${dist.dir}"/>
     <mkdir dir="${src.dist.version.dir}"/>
     <mkdir dir="${src.dist.version.dir}/lib"/>
@@ -641,7 +641,7 @@
 
   </target>
 
- <target name="package-bin" depends="runtime, javadoc">
+ <target name="package-bin" depends="runtime, javadoc" description="--> generate binary distribution package">
     <mkdir dir="${dist.dir}"/>
     <mkdir dir="${bin.dist.version.dir}"/>
     <mkdir dir="${bin.dist.version.dir}/lib"/>
@@ -686,7 +686,7 @@
   <!-- ================================================================== -->
   <!-- Make src release tarball                                               -->
   <!-- ================================================================== -->
-  <target name="tar-src" depends="package-src">
+  <target name="tar-src" depends="package-src" description="--> generate src.tar.gz distribution package">
     <tar compression="gzip" longfile="gnu"
       destfile="${src.dist.version.dir}.tar.gz" basedir="${src.dist.version.dir}">
       <tarfileset dir="${dist.dir}" mode="664">
@@ -703,7 +703,7 @@
   <!-- ================================================================== -->
   <!-- Make bin release tarball                                               -->
   <!-- ================================================================== -->
-  <target name="tar-bin" depends="package-bin">
+  <target name="tar-bin" depends="package-bin" description="--> generate bin.tar.gz distribution package">
     <tar compression="gzip" longfile="gnu"
       destfile="${bin.dist.version.dir}.tar.gz" basedir="${bin.dist.version.dir}">
       <tarfileset dir="${dist.dir}" mode="664">
@@ -719,7 +719,7 @@
   <!-- ================================================================== -->
   <!-- Make src release zip                                               -->
   <!-- ================================================================== -->
-  <target name="zip-src" depends="package-src">
+  <target name="zip-src" depends="package-src" description="--> generate src.zip distribution package">
    <zip compress="true" casesensitive="yes" 
      destfile="${src.dist.version.dir}.zip" basedir="${src.dist.version.dir}">
    <zipfileset dir="${dist.dir}" filemode="664">
@@ -736,7 +736,7 @@
   <!-- ================================================================== -->
   <!-- Make bin release zip                                               -->
   <!-- ================================================================== -->
-  <target name="zip-bin" depends="package-bin">
+  <target name="zip-bin" depends="package-bin" description="--> generate src.zip distribution package">
    <zip compress="true" casesensitive="yes" 
      destfile="${bin.dist.version.dir}.zip" basedir="${bin.dist.version.dir}">
    <zipfileset dir="${dist.dir}" filemode="664">
@@ -779,7 +779,7 @@
 
   <!-- target: clean-cache  ============================================= -->
   <target name="clean-cache" depends=""
-                        description="delete ivy cache">
+                        description="--> delete ivy cache">
     <ivy:cleancache />
   </target>
 
@@ -790,7 +790,7 @@
   <!-- ================================================================== -->
   <!-- RAT targets                                                        -->
   <!-- ================================================================== -->
-  <target name="rat-sources-typedef">
+  <target name="rat-sources-typedef" description="--> run RAT antlib task">
     <typedef resource="org/apache/rat/anttasks/antlib.xml" >
       <classpath>
         <fileset dir="." includes="rat*.jar"/>
@@ -799,7 +799,7 @@
   </target>
 
   <target name="rat-sources" depends="rat-sources-typedef"
-	  description="runs the tasks over src/java">
+	  description="--> runs RAT tasks over src/java">
     <rat:report xmlns:rat="antlib:org.apache.rat.anttasks">
       <fileset dir="src">
       	<include name="java/**/*"/>
@@ -819,7 +819,7 @@
   </taskdef>
   
   <!-- Add the target -->
-  <target name="sonar">
+  <target name="sonar" description="--> run SONAR analysis">
     
     <!-- list of mandatory source directories (required) -->
     <property name="sonar.sources" value="${src.dir}"/>
